# tf-viewer

./: .dockerignore  .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  README.md  UPGRADE.md  config.toml  docker-compose.yml  example-config.toml  fetchvue.ps1  test.fit
.github/workflows/: rust.yml
crates/db/: db
crates/tf-auth/: Cargo.toml
crates/tf-auth/src/: database.rs  error.rs  lib.rs  session.rs  solicitor.rs  state.rs  templates.rs
crates/tf-auth/src/database/: mod.rs  resources.rs
crates/tf-auth/src/database/resource/: client.rs  mod.rs  user.rs
crates/tf-auth/src/endpoint/: extension.rs  mod.rs
crates/tf-auth/src/primitives/: authorizer.rs  issuer.rs  mod.rs  registrar.rs  scopes.rs
crates/tf-auth/src/routes/: client.rs  index.rs  mod.rs  oauth.rs  refresh.rs  signin.rs  signout.rs  signup.rs  token.rs
crates/tf-auth/static/: spectre.min.css
crates/tf-auth/static/js/: minimal-switcher.js
crates/tf-auth/templates/: authorize.html  base.html  client.html  index.html  signin.html  signup.html
crates/tf-database/: Cargo.toml
crates/tf-database/src/: activity.rs  error.rs  gear.rs  lib.rs  query.rs  resource.rs  root.rs  user.rs
crates/tf-database/src/activity/: mod.rs  query.rs
crates/tf-database/src/gear/: mod.rs  query.rs
crates/tf-database/src/primitives/: index.rs  key.rs  mod.rs  relation.rs  tree.rs  value.rs
crates/tf-database/src/primitives/collection/: index.rs  mod.rs  relation.rs  tree.rs
crates/tf-database/src/resource/: activity.rs  gear.rs  mod.rs  user.rs
crates/tf-database/src/resource/index/: default_gear.rs  mod.rs
crates/tf-database/src/user/: mod.rs  query.rs
crates/tf-database/tests/: foreign_keys.rs
crates/tf-events/: Cargo.toml
crates/tf-events/src/: broker.rs  lib.rs
crates/tf-graphql/: Cargo.toml
crates/tf-graphql/src/: activity.rs  connection.rs  gear.rs  guard.rs  lib.rs  user.rs
crates/tf-graphql/src/mutation/: activity.rs  gear.rs  mod.rs  user.rs
crates/tf-graphql/src/query/: activity.rs  gear.rs  mod.rs  user.rs
crates/tf-graphql/src/query/activity/: record.rs
crates/tf-graphql/src/subscription/: mod.rs
crates/tf-macro/: Cargo.toml
crates/tf-macro/src/: lib.rs  oauth.rs
crates/tf-models/: Cargo.toml
crates/tf-models/src/: activity.rs  gear.rs  lib.rs  query.rs  sport.rs  user.rs
crates/tf-models/src/graphql/: mod.rs  user.rs
crates/tf-parse/: Cargo.toml
crates/tf-parse/src/: error.rs  fit.rs  lib.rs
crates/tf-scopes/: Cargo.toml
crates/tf-scopes/src/: lib.rs
data/: .gitignore  config.toml
docker/: Dockerfile  README.md  arch  config.mak  docker-comopse.yml  docker-compose.yml
src/: .parser.rs.swp  cache.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  state.rs  static_files.rs
src/database/: activities.rs  gear.rs  users.rs
src/db/: db  snap.00000000000005E8
src/models/: activity.rs  mod.rs  types.rs
src/parser/: fit.rs  gpxp.rs  mod.rs  parser.rs
src/routes/: activity.rs  api.rs  authentication.rs  error.rs  gear.rs  graphql.rs  index.rs  mod.rs  upload.rs  user.rs  utils.rs
src/server/: main.rs
static/: index.html
static/css/: datatables.min.css  pure-min.css  spectre-exp.min.css  styles.css  stylesheet.css
static/js/: activitytable.js  datatables.min.js  equipment.js  login.js  mainsite.js  menu.js  register.js  script.js  upload.js
templates/: base.html  error.html  index.html  upload.html
templates/activity/: activity.html  activityindex.html  index.html  settings.html
templates/auth/: login.html  register.html  signin.html  signup.html
templates/gear/: add.html  gearindex.html  index.html  settings.html
templates/user/: avatar.html  index.html  settings.html  user.html  userindex.html
tf-auth/: Cargo.toml
tf-auth/src/: database.rs  error.rs  lib.rs  middleware.rs  routes.rs  server.rs  templates.rs
tf-auth/src/middleware/: redirect.rs
tf-auth/src/routes/: authorize.rs  mod.rs  oauth.rs  refresh.rs  signin.rs  signup.rs  token.rs
tf-auth/templates/: authorize.html  base.html  index.html  signin.html  signup.html
tf-database/: Cargo.toml
tf-database/src/: access.rs  activity.rs  error.rs  gear.rs  lib.rs  query.rs  user.rs
tf-macro/: Cargo.toml
tf-macro/src/: expand.rs  lib.rs  oauth.rs
tf-models/: Cargo.toml
tf-models/src/: activity.rs  backend.rs  entry.rs  frontend.rs  lib.rs  session.rs  sport.rs  types.rs  user.rs
tf-models/src/backend/: gear.rs  lap.rs  record.rs  session.rs  user.rs
tf-models/src/frontend/: fmt.rs  gear.rs  lap.rs  record.rs  session.rs  totals.rs
tf-parse/: Cargo.toml
tf-parse/src/: fit.rs
