[package]
name = "tf-viewer"
version = "0.1.1"
authors = ["danielalvsaaker <daniel@nopemail.net>", "vidarandrebo"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/tf-auth",
    "crates/tf-database",
    "crates/tf-graphql",
    "crates/tf-parse",
]

[dependencies]
# web server etc.
axum = { version = "0.4" }
tower-http = { version = "0.2", features = ["cors", "compression-full"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

mimalloc = { version = "*", default-features = false }
tikv-jemallocator = "0.4"

oxide-auth = "0.5"
oxide-auth-axum = "0.1"

# error handling
thiserror = "1.0"
bytes = "*"

tf-models = { path = "crates/tf-models", features = ["graphql"] }
tf-database = { path = "crates/tf-database" }
tf-auth = { path = "crates/tf-auth" }
tf-parse = { path = "crates/tf-parse" }
tf-graphql = { path = "crates/tf-graphql" }

nanoid = "*"
moka = { version = "0.7", features = ["future"] }
staticmap = "*"
crc32fast = "*"
rayon = "*"

async-graphql = { version = "*" }
async-graphql-axum = "*"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", default-features = false }
oxide-auth = { path = "/home/daniel/oxide-auth/oxide-auth" }

[profile.dev]
debug = 0

[profile.release]
incremental = true
