[package]
name = "tf-viewer"
version = "0.1.1"
authors = ["danielalvsaaker <daniel@nopemail.net>", "vidarandrebo"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/tf-auth",
    "crates/tf-database",
    "crates/tf-graphql",
    "crates/tf-models",
    "crates/tf-parse",
]

[dependencies]
# web server etc.
axum = { version = "0.5" }
tower-http = { version = "0.3", features = ["cors", "compression-full"] }
tower = { version = "0.4", features = ["limit"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

tikv-jemallocator = { version = "0.4", features = ["background_threads"] }

oxide-auth = "0.5"
oxide-auth-axum = "0.1"

# error handling
thiserror = "1.0"
bytes = "1.1"

tf-models = { path = "crates/tf-models", features = ["graphql"] }
tf-database = { path = "crates/tf-database" }
tf-auth = { path = "crates/tf-auth" }
tf-parse = { path = "crates/tf-parse" }
tf-graphql = { path = "crates/tf-graphql" }

nanoid = "0.4"
moka = { version = "0.7", features = ["future"] }
staticmap = "0.4"
crc32fast = "1.3"
rayon = "1.5"

async-graphql = "4.0"
async-graphql-axum = "4.0"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", default-features = false }
oxide-auth = { git = "https://github.com/HeroicKatora/oxide-auth" }
askama = { git = "https://github.com/djc/askama" }
askama_axum = { git = "https://github.com/djc/askama" }

[profile.dev]
debug = 0

[profile.release]
incremental = true
