[package]
name = "tf-viewer"
version = "0.1.1"
authors = ["danielalvsaaker <daniel@nopemail.net>", "vidarandrebo"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/tf-auth",
    "crates/tf-database",
    "crates/tf-graphql",
    "crates/tf-models",
    "crates/tf-parse",
]

[dependencies]
# web server etc.
axum = { version = "0.5", default-features = false }
tower-http = { version = "0.3", features = ["cors", "compression-full"] }
tower = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

oxide-auth = "0.5"
oxide-auth-axum = "0.2"

# error handling
thiserror = "1.0"

tf-auth = { path = "crates/tf-auth" }
tf-database = { path = "crates/tf-database" }
tf-graphql = { path = "crates/tf-graphql" }
tf-models = { path = "crates/tf-models", features = ["graphql"] }
tf-parse = { path = "crates/tf-parse" }

bytes = "1.1"
nanoid = "0.4"
moka = { version = "0.9", default-features = false, features = ["atomic64", "future", "quanta"] }
staticmap = "0.4"
crc32fast = "1.3"
rayon = "1.5"

async-graphql = { version = "4.0", default-features = false }
async-graphql-axum = "4.0"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
features = ["background_threads"]

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", rev = "b1d74aef688c27fccc" }
oxide-auth = { git = "https://github.com/HeroicKatora/oxide-auth" }
askama = { git = "https://github.com/djc/askama" }
askama_axum = { git = "https://github.com/djc/askama" }
