[package]
name = "tf-auth"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2018"

[dependencies]
actix = { version = "0.11", default-features = false }
actix-web = { version = "4.0.0-beta.8", default-features = false }
oxide-auth = { git = "https://github.com/videni/oxide-auth" }
oxide-auth-actix = { git = "https://github.com/videni/oxide-auth" }
actix-identity = "0.4.0-beta.2"
url = "*"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "*"
nanoid = "*"
