[package]
name = "tf-auth"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2021"

[dependencies]
argon2 = { version = "*", features = ["std"] }
oxide-auth = { git = "https://github.com/danielalvsaaker/oxide-auth" }
oxide-auth-axum = { git = "https://github.com/danielalvsaaker/oxide-auth" }
axum = "*"
thiserror = "*"
url = "*"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "*"
sled = { git = "https://github.com/spacejam/sled", features = ["compression"] }
nanoid = "*"
dashmap = "*"
chrono = { version = "*", default-features = false }
axum-debug = "*"
