[package]
name = "tf-database"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
sled = { version = "*", features = ["compression"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "*"
tf-models = { path = "../tf-models" }
thiserror = "*"
