[package]
name = "tf-database"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
sled = { git = "https://github.com/spacejam/sled", features = ["compression"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "*"
tf-models = { path = "../tf-models" }
thiserror = "*"
