[package]
name = "tf-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "alloc"] }
uom = { version = "0.31", default-features = false, features = ["si", "use_serde", "u16", "u32", "f64"] }
chrono = { version = "0.4", features = ["serde"] }
paste = "*"
