[package]
name = "tf-auth"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2021"

[dependencies]
argon2 = { version = "*", features = ["std"] }
oxide-auth = "0.5"
oxide-auth-axum = "0.1"
axum = "*"
thiserror = "*"
url = "*"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "*"
sled = { version = "0.34", features = ["compression"] }
nanoid = "*"
chrono = { version = "*", default-features = false }
