[package]
name = "tf-auth"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2021"

[dependencies]
askama = { version = "*", features = ["with-axum"] }
askama_axum = "*"

argon2 = { version = "0.3", features = ["std"] }
oxide-auth = "0.5"
oxide-auth-axum = "0.1"
axum = { version = "*", features = ["headers"] }
thiserror = "*"
url = "*"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "*"
nanoid = "*"
chrono = { version = "*", default-features = false }
async-session = "*"
tf-models = { path = "../tf-models" }
tf-database = { path = "../tf-database" }
