[package]
name = "tf-database"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
pot = "1"
tf-models = { path = "../tf-models" }
thiserror = "*"
nebari = "*"
lz4_flex = "*"

[dev-dependencies]
nanoid = "*"
