[package]
name = "tf-database"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pot = "1.0"
tf-models = { path = "../tf-models" }
thiserror = "1.0"
nebari = "0.5"
lz4_flex = "0.9"

[dev-dependencies]
nanoid = "0.4"
tempfile = "3.3"
