[package]
name = "tf-graphql"
version = "0.1.1"
authors = ["danielalvsaaker <daniel@nopemail.net>", "vidarandrebo"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
async-graphql = "3.0"
tf-models = { path = "../tf-models", features = ["graphql"] }
tf-database = { path = "../tf-database" }
tf-auth = { path = "../tf-auth" }
tokio = { version = "1", features = ["rt-multi-thread"] }
oxide-auth = "0.5"
