[package]
name = "tf-graphql"
version = "0.1.1"
authors = ["danielalvsaaker <daniel@nopemail.net>", "vidarandrebo"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
async-graphql = { version = "4.0", default-features = false }
tf-models = { path = "../tf-models", features = ["graphql"] }
tf-database = { path = "../tf-database" }
tf-auth = { path = "../tf-auth" }
oxide-auth = "0.5"

tokio = "*"
