[package]
name = "tf-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf-models = { path = "../tf-models" }
chrono = { version = "0.4", default-features = false }
fitparser = "0.5" 
thiserror = "1"
uom = { version = "0.33", default-features = false, features = ["si", "u16", "u32", "f64"] }
